test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/valid/libraries/internal_hides_external_linkage.plx
pub x: i32 = 10

pub fn read_x(none) i32 {
    return x
}
