test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/extra_credit/file_scope_label.plx
# Labels cannot appear at file scope.
label x
foo: i32 = 0

pub fn main(none) i32 {
    return 0
}
